# Third-Year-Diploma-Thesis

./: CMakeLists.txt  LineSegment.cpp  LineSegment.h  Point.cpp  Point.h  README.md  main.cpp
